--- a/index.html
+++ b/index.html
@@ -103,14 +103,14 @@
 								</article>
 								<article>
 									<header>
-										<span class="date">April 14, 2017</span>
-										<h2><a href="#">Tempus sed<br />
-										nulla imperdiet</a></h2>
+										<span class="date">Project 4</span>
+										<h2><a href="#">Data Analytics<br />
+										Created Stunning visualizations for the top management for policy and decision making.</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<p>Click the button below to see sample projects on data analysis which was used to generate stunning reports / dashboards in excel and PowerBI</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
+										<li><a href="p4.html" class="button">Full Story</a></li>
 									</ul>
 								</article>
 								<article>
