--- a/index.html
+++ b/index.html
@@ -103,12 +103,12 @@
 								</article>
 								<article>
 									<header>
-										<span class="date">Project 4</span>
-										<h2><a href="#">Data Analytics<br />
-										Created Stunning visualizations for the top management for policy and decision making.</a></h2>
+										
+										<h2><a href="#">Project 4<br />
+										Data Analysis and reporting dashboards</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
-									<p>Click the button below to see sample projects on data analysis which was used to generate stunning reports / dashboards in excel and PowerBI</p>
+									<p>Click the button below to see sample projects on data analysis which was used to generate stunning reports / intuitive dashboards in excel and PowerBI</p>
 									<ul class="actions special">
 										<li><a href="p4.html" class="button">Full Story</a></li>
 									</ul>
