--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 									</ul>
 								</article>
 								<article>
-									<header>
+									<!--<header>
 										<span class="date">April 11, 2017</span>
 										<h2><a href="#">Odio magna<br />
 										sed consectetur</a></h2>
@@ -123,10 +123,10 @@
 									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
 									<ul class="actions special">
 										<li><a href="#" class="button">Full Story</a></li>
-									</ul>
+									</ul>-->
 								</article>
 								<article>
-									<header>
+									<!--<header>
 										<span class="date">April 7, 2017</span>
 										<h2><a href="#">Augue lorem<br />
 										primis vestibulum</a></h2>
@@ -135,7 +135,7 @@
 									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
 									<ul class="actions special">
 										<li><a href="#" class="button">Full Story</a></li>
-									</ul>
+									</ul>-->
 								</article>
 							</section>
 
