--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
 								<h3>Social</h3>
 								<ul class="icons alt">
 									<li><a href="https://linkedin.com/in/agyei-osei-duodu-a8124317a" class="icon brands alt fa-linkedin"><span class="label">Linkedin</span></a></li>
-									<li><a href="https://omafosafo.github.io/potfolio/" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+									<li><a href="https://omafosafo.github.io/portfolio/" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
 								</ul>
 							</section>
 						</section>
