--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 									<header>
 										
 										<h2><a href="#">Project 2<br />
-										Designed and Implemented Digital Examination System (Ghana) </a></h2>
+										Designed and Implemented Digital Examination System (Liberia) </a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/pic11.webp" alt="" /></a>
 									<p>Following the successful implementation of the Digital Examination system for the Nursing and Midwifery Ccouncil of Ghana, the New York University Rory Meyers College of Nursing...</p>
