--- a/p1.html
+++ b/p1.html
@@ -47,6 +47,11 @@
 								<P><b>Project Achievements:</b> Examination results are published 10 days after examination a reduction from 40 days</P>
 								<p><b>product available :</b> <a href> https://www.des.nmc.gov.gh </href></p>
 								<p><b>Roles:</b></p>
+								<ul>
+									<li>Project Manager and Team Lead</li>
+									<li>System analyst: Software Requirement Specification (SRS)</li>
+									<li>Solutions Architect</li>
+								</ul>
 							</section>
 
 					</div>
