--- a/p1.html
+++ b/p1.html
@@ -45,10 +45,14 @@
 								<li>System Documentation</li> Database Dictionary | Project Start Architecture | 
 								</ul></p>
 								<P><b>Project Achievements:</b> Examination results are published 10 days after examination a reduction from 40 days</P>
-								<p><b>product available :</b> <a href> https://www.des.nmc.gov.gh </href></p>
+								<p><b>product available:</b> <a href> https://www.des.nmc.gov.gh </href></p>
 								<p><b>Roles:</b></p>
 								<ul>
-									<li>Project Manager and Team Lead</li>
+									<li>Project Planning</li>
+									<p>Defining the project's scope, goals, and objectives.</br>
+									Developing detailed plans that outline tasks, resources, timelines, and deliverables.</p>
+									
+									
 									<li>System analyst: Software Requirement Specification (SRS)</li>
 									<li>Solutions Architect</li>
 								</ul>
