--- a/p2.html
+++ b/p2.html
@@ -8,6 +8,8 @@
 	<head>
 		<title>Projects - Digital Examination System</title>
 		<meta charset="utf-8" />
+		<meta name="author" content="Osei Duodu Agyei">
+		<meta name="keywords" content="Data Analyst,Data,Excel,Python,PowerBI">
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
