--- a/index.html
+++ b/index.html
@@ -116,16 +116,16 @@
 									</ul>
 								</article>
 								<article>
-									<!--<header>
-										<span class="date">April 11, 2017</span>
-										<h2><a href="#">Odio magna<br />
-										sed consectetur</a></h2>
+									<header>
+										
+										<h2><a href="#">Project 5<br />
+										Web Development and Search Engine Optimization</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/pic06.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<p>Project scope:</b>Design and Implement a Corporate website that is data driven allowing self service features such as Member Registration....</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
-									</ul>-->
+										<li><a href="p5.html" class="button">Full Story</a></li>
+									</ul>
 								</article>
 								<article>
 									<!--<header>
