--- a/p5.html
+++ b/p5.html
@@ -49,6 +49,37 @@
 								</ul></p>
 								<P><b>Project Achievements:</b> Through the website, the association has been able to reach all of their members numbering over 4000 professionals. The site has also become attractive drawing traffic and more members to itself. It ranks topmost in search results on all major search engines.  </P>
 								<p><b>product available:</b> <a href> https://narmghana.org </href></p>
+									<p><b>Activities:</b> 
+										<ul>
+											<li>
+												Requirement Analysis: Understanding the client's needs and goals for the website.
+											</li>
+											<li>
+												Planning: Creating a project plan, including timelines, resources, and milestones.
+											</li>
+											<li>
+												Design: Developing the visual layout and user interface (UI) design, often using tools like Adobe XD or Figma.
+											</li>
+											<li>
+												Front-End Development: Writing code and customizing templates for the client-side of the website using HTML, CSS, and JavaScript.
+											</li>
+											<li>
+												Back-End Development: Building the server-side logic, databases, and APIs using languages like Python, PHP, or Node.js.
+											</li>
+											<li>
+												Testing: Conducting various tests (e.g., unit, integration, and user acceptance testing) to ensure the website functions correctly.
+											</li>
+											<li>
+												Deployment: Launching the website on a web server and making it accessible to users.
+											</li>
+											<li>
+												SEO Optimization: Implementing strategies to improve the website's visibility on search engines.
+											</li>
+											<li>
+												Security and Maintenance: Ensuring the website is secure from vulnerabilities and attacks and Regularly updating the website, fixing bugs, and adding new features as needed.
+											</li>
+										</ul>
+									</p>
 								
 							</section>
 
